# MCPP

./: .gitignore  AGENTS.md  DEVELOPMENT_LOG.md  README.md  environment.cuda.yml  environment.yml  pyproject.toml  当前进度总结.docx  当前进度总结.original.docx
configs/: ablation_centered_cnn_gat_off.toml  ablation_centered_cnn_gat_on.toml  ablation_gat_off.toml  ablation_gat_on.toml  ablation_mapmsg_gat_off.toml  ablation_mapmsg_gat_on.toml  ablation_mapmsg_gat_on_cir.toml  ablation_mapmsg_gat_on_continued.toml  ablation_mapmsg_gat_on_cuap.toml  ablation_mapmsg_gat_on_gated_cuap.toml  cuap_smoke.toml  formal_v1.toml  gated_cuap_smoke.toml  platform_profiles_cn_common.toml  platform_profiles_la_training_v1.toml  platform_profiles_yangshan_training_v133.toml  port_dalian_water_v0.toml  port_los_angeles_training_v1.toml  port_shanghai_yangshan_v1.toml  port_yangshan_task_initial_v1.toml  port_yangshan_training_v133.toml  smoke.toml  smoke_centered_cnn.toml
docs/: current_task.md  environment_snapshot_before_gpu_rebuild.md  experiment_log.md  gpu_rollout_resume_usage.md  literature_basis.md  model_specification.md  training_resource_policy.md
mathbased_mcpp/: __init__.py  __main__.py
reports/: gat_ablation_comparison_2026-05-24.docx  gated_cuap_doc_extracted.txt
tests/: test_config_env.py  test_cuap.py  test_cuda.py  test_imitation.py  test_intent_relation.py  test_los_angeles_effect_render.py  test_los_angeles_task_mapping_import.py  test_port_algorithm_comparison.py  test_port_inspection_coupled_env.py  test_port_inspection_v12_contract.py  test_port_reward.py  test_rewards.py  (+3 more)
(+460 files in other folders)
